correction to build path